--- a/docs/astrofd_refs.bib
+++ b/docs/astrofd_refs.bib
@@ -172,13 +172,13 @@
   pages={1727--1740}
 }
 
-@article{anninos1997,
-  title={Cosmological hydrodynamics with multigroup radiation},
-  author={Anninos, P. and Zhang, Y. and Abel, T. and Norman, M. L.},
-  journal={New Astronomy},
-  year={1997},
-  volume={2},
-  pages={209--224}
+@article{cen1992,
+  title={A hydrodynamic approach to cosmology: methodology and tests},
+  author={Cen, R.},
+  journal={Astrophysical Journal Supplement Series},
+  year={1992},
+  volume={78},
+  pages={341--364}
 }
 
 @article{noble2006,
